--- a/index.html
+++ b/index.html
@@ -17,24 +17,30 @@
         </h5>
       </div>
       <div class="p-6">
-        <p class="text-gray-700 text-m font-medium text-center">
-          2023. 02. 05. (일)
+        <h5 class="text-gray-900 text-m font-medium mb-2 text-center ">
+          【 일시 】
+        </h5>
+        <p class="text-gray-900 text-m font-light text-center">
+          2023년 2월 5일 (일요일)
         </p>
-        <p class="text-gray-700 text-m font-medium mb-4 text-center">
+        <p class="text-gray-900 text-m font-light mb-4 text-center">
           낮 12시 ~ 오후 2시 30분
         </p>
-        <p class="text-gray-700 text-m font-medium text-center">
+        <h5 class="text-gray-900 text-m font-medium mb-2 text-center ">
+          【 장소 】
+        </h5>
+        <p class="text-gray-900 text-m font-light text-center">
           인천 연수구 오라카이 송도파크호텔 
         </p>
-        <p class="text-gray-700 text-m font-medium mb-4 text-center">
+        <p class="text-gray-900 text-m font-light mb-4 text-center">
           레벨 19 뷔페 레스토랑
         </p>
       </div>
       <div class="p-6">
-        <p class="text-gray-700 text-base mb-4 text-center">
+        <h5 class="text-gray-900 text-m font-medium mb-2 text-center ">
           【 모시는 글 】
-        </p>
-        <p class="text-gray-700 text-base mb-4 text-center">
+        </h5>
+        <p class="text-gray-900 text-base font-light mb-4 text-center">
           저희를 낳아주시고 한없는 사랑으로 길러주신<br/>
           마우섭 아버님의 고희(칠순)를 맞아<br/>
           작은 정성으로 축하의 자리를 마련했습니다.<br/>
@@ -44,15 +50,29 @@
           기쁨을 나눠주시면 감사하겠습니다.
         </p>
       </div>
+      <h5 class="text-gray-900 text-m font-medium mb-2 text-center ">
+        【 오시는 길 】
+      </h5>
+      <a data-mdb-ripple="true" data-mdb-ripple-color="light">
+        <img class="rounded-t-lg mb-2" src="./orakai.jpeg" alt="orakai"/>
+      </a>
       <div class="p-6">
+        <p class="text-gray-900 text-m font-light mb-4 text-center">
+          인천 연수구 오라카이 송도파크호텔<br/>
+          레벨 19 뷔페 레스토랑
+        </p>
         <button 
           type="button" 
-          class="w-full inline-block px-6 py-2.5 bg-green-600 text-white font-medium text-m leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out mb-2">
+          class="w-full inline-block px-6 py-2.5 bg-green-600 text-white font-medium text-m leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out mb-2"
+          onclick="location.href='https://map.naver.com/v5/entry/place/1793733662?c=14097588.3677774,4493346.6349953,13,0,0,0,dh'"
+        >
           네이버 지도 보기
         </button>
         <button 
           type="button" 
-          class="w-full inline-block px-6 py-2.5 bg-yellow-400 font-medium text-m leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
+          class="w-full inline-block px-6 py-2.5 bg-yellow-400 font-medium text-m leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+          onclick="location.href='http://kko.to/rIOX3VXZMa'"
+        >
           카카오 지도 보기
         </button>
       </div>
