--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:locale" content="ko_KR">
+  <meta property="og:title" content="아버님의 고희연에 초대합니다">
+  <meta property="og:description" content="2023년 2월 5일(일요일) 인천 연수구 오라카이 송도파크호텔">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
