--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="flex justify-center">
     <div class="rounded-lg shadow-lg bg-white max-w-sm">
       <a data-mdb-ripple="true" data-mdb-ripple-color="light">
-        <img class="rounded-t-lg" src="./p-birth.jpg" alt="happy birthday"/>
+        <img class="rounded-t-lg" src="./p-birth-resized.jpg" alt="happy birthday"/>
       </a>
       <div class="p-6">
         <h5 class="text-gray-900 text-xl font-medium mb-2 text-center ">
