--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta property="og:locale" content="ko_KR">
   <meta property="og:title" content="아버님의 고희연에 초대합니다">
   <meta property="og:description" content="2023년 2월 5일(일요일) 인천 연수구 오라카이 송도파크호텔">
+  <meta property="og:image" content="./70th-eh-og.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <div class="rounded-lg shadow-lg bg-white max-w-sm">
       <a data-mdb-ripple="true" data-mdb-ripple-color="light">
         <!-- <img class="rounded-t-lg" src="./p-birth-resized.jpg" alt="happy birthday"/> -->
-        <img class="rounded-t-lg" src="./70th-birth-flower.jpg" alt="happy birthday"/>
+        <img class="rounded-t-lg border-solid p-2" src="./70th-eh.jpg" alt="happy birthday"/>
       </a>
       <div class="p-6">
         <h5 class="text-gray-900 text-xl font-medium mb-2 text-center ">
